samples/_failures_safe/1761203603_066ea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be8d44e0.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_be8d44e0.c:152:13: error: expected declaration or statement at end of input
  152 |             result->data[j][i] = input->data[i][j];
      |             ^~~~~~
./samples/SAFE/__tmp_be8d44e0.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be8d44e0.c:152:13: error: expected declaration or statement at end of input
